# pathtracer

./: CMakeLists.txt  CPPLINT.cfg  README.md  cmake.sh  create-file.py  linter.sh
config/: cornell-box-dragon.json  cornell-box-glass.json  cornell-box-original.json  cornell-box-sphere.json  cornell-box-water.json  lost-empire.json  rungholt.json
include/: area-light.hpp  bounding-box.hpp  bvh.hpp  camera.hpp  color.hpp  config.hpp  image-loader.hpp  image-saver.hpp  image.hpp  light.hpp  material.hpp  parser.hpp  pathtracer.hpp  png-saver.hpp  primitive.hpp  ray.hpp  renderer.hpp  samplers.hpp  scene.hpp  triangle.hpp  vertex.hpp  worker.hpp
lib/src/spdlog/tests/: errors.cpp
scenes/: CornellBox-Dragon.mtl  CornellBox-Glass.mtl  CornellBox-Glossy.mtl  CornellBox-Sphere.mtl  CornellBox-Water.mtl
scripts/: clang-format.sh  cmake.sh  create-file.py  deploy.sh  download.sh  dragon.sh  env.sh  glass.sh  glossy.sh  linter.sh  lost-empire.sh  original.sh  run.sh  rungholt.sh  sphere.sh  water.sh
src/: area-light.cpp  bounding-box.cpp  bvh.cpp  camera.cpp  color.cpp  config.cpp  image-loader.cpp  image.cpp  main.cpp  parser.cpp  pathtracer.cpp  png-saver.cpp  primitive.cpp  ray.cpp  renderer.cpp  triangle.cpp  worker.cpp
tests/: camera_tests.cpp  triangle_tests.cpp
